# bonsai_web

./: README.md  bonsai_web.opam
docs/advanced/: how_bonsai_works.md  why_no_bind.md
docs/guide/: 00-introduction.md  01-virtual_dom.md  02-effects.md  03-incrementality.md  04-state.md  05-control_flow.md
docs/how_to/: best_practices_pitfalls.md  css.md  dynamic_scope.md  effects_and_stale_values.md  focus.md  forms.md  higher_order_functions.md  lifecycles.md  partial_render_table.md  resetting_state.md  rpcs.md  state_per_key.md  testing.md  theming.md  time.md  uri_parsing.md  url_var.md  var.md
web/: bonsai_web.ml  dune  effect.ml  effect.mli  for_introspection.ml  for_introspection.mli  for_profiling.ml  for_profiling.mli  forward_performance_entries.ml  forward_performance_entries.mli  persistent_var.ml  persistent_var.mli  rpc_effect.ml  rpc_effect.mli  start.ml  start.mli  to_incr_dom.ml  to_incr_dom_intf.ml  util.ml  util.mli
web/view/form/: bonsai_web_ui_form_view.ml  dune
web/view/kado/src/: cards.ml  dune  input.ml  kado.ml
web/view/src/: autosize_table_styling.css  bonsai_web_ui_view.ml  bonsai_web_ui_view.mli  constants.ml  default_table_styling.css  default_theme_helpers.ml  default_theme_helpers.mli  dune  expert.ml  expert.mli  for_changelog.ml  for_changelog.mli  for_codemirror.ml  for_codemirror.mli  for_prt.ml  for_prt.mli  for_toplayer.ml  for_toplayer.mli  form.ml  import.ml  table.ml  tooltip.ml  underlying_intf.ml
web/view/tailwind_interop/: bonsai_web_ui_view_tailwind_interop.ml  bonsai_web_ui_view_tailwind_interop.mli  dune
web/view/toggle/src/: bonsai_web_ui_toggle.ml  dune
